fix RomManagerOds